# ThetaQuant

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DAILY_DATA_ROUTINE.md  DAILY_ROUTINE.md  DEPLOYMENT.md  DEPLOY_APP.md  Dockerfile  FINDINGS_LOG.md  OPERATIONS_MANUAL.md  README.md  SESSION_STATE.md  STRATEGY_LIVE.md  TEAM_SETUP.md  THETA_GAINERS_BRAIN_DUMP.md  TIER_PLAYBOOK_PRINTABLE.md  bot_start.sh  bot_status.sh  bot_stop.sh  check.sh  docker-compose.yml  evening.sh  morning.sh  pyproject.toml  requirements.txt  vercel.json
analyses/: 000_sample_non_expiry_premium_decay.py  001_non_expiry_intraday_deep_otm.py  002_non_expiry_rule_sweep.py  003_10am_entry_rs2_target.py  004_e_minus_1_premium_survey.py  005_e_zero_premium_survey.py  006_portfolio_scale_friction_sensitivity.py  007_real_broker_cost_winner.py  008_e_zero_time_distance_grid.py  009_e_zero_minute_level_entry.py  010_nifty_e0_timing_calibration.py  010v2_nifty_e0_timing_with_calendar.py  011_nifty_vs_sensex_behavior.py  012_100cr_full_year_simulation.py  013_fake_spike_detector.py  014_deep_otm_manipulation.py  015_nifty_atm_straddle_e1_to_e4.py  016_nifty_straddle_tp_sl.py  017_ce_premium_inflation_pattern.py  018_b1_yellow_orange_red_triggers.py  019_b1_yellow_two_condition_search.py  020_b1_yellow_tighter_ev_actions.py  021_b1_yellow_ev_with_real_options.py  022_b1_profit_take_rules.py  023_b1_mid_near_otm_with_entry_filters.py  024_b1_multi_entry_time.py  025_tier1_distance_optimization.py  026_e1_regime_distance_entry.py  027_deep_otm_entry_timing.py  028_spike_timing_nifty_vs_sensex.py  (+8 more)
(+132 files in other folders)
