[project]
name = "thetaquant"
version = "0.2.0"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2",
    "pyarrow>=15.0",
    "duckdb>=0.10",
    "numpy>=1.26",
    "scipy>=1.11",
    "openpyxl>=3.1",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "pytz>=2024.1",
    "kiteconnect>=4.2",
    "supabase>=2.0",
    "python-dotenv>=1.0",
]

[tool.vercel]
entrypoint = "dashboard.server:app"
